--- a/index.html
+++ b/index.html
@@ -274,5 +274,7 @@
             </article>
         </section>
     </main>
+
+    <script type="module" src="./src/index.js"></script>
 </body>
 </html>
