test: modificações do theme temaBlack

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Sistema de Temas</title>
     <link rel="stylesheet" href="./src/style/css/index.css">
 </head>
-<body class="">
+<body class="temaBlack">
     <!-- https://www.figma.com/file/AmkCXW1tBWMGQsep1ImDGk/%23boraCodar---Desafio-10-(Community)?node-id=328%3A2&t=UVuDylcdQ3CrrTPP-0 -->
 
     <main class="container">
