feat: menu para escolher temas

--- a/index.html
+++ b/index.html
@@ -275,6 +275,19 @@
         </section>
     </main>
 
+    <div class="selectTheme">
+        <img class="iconTheme" src="./src/assets/iconTheme.png" alt="icon Theme" />
+        
+        <select id="select">
+            <option value="1">default</option>
+            <option value="2">massaRossa</option>
+            <option value="3">sorvete</option>
+            <option value="4">dracula</option>
+            <option value="5">geleia</option>
+            <option value="5">backTheme</option>
+          </select>
+    </div>
+
     <script type="module" src="./src/index.js"></script>
 </body>
 </html>
