modified: modificações no index.html e styles css menu de selecionar temas

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Sistema de Temas</title>
     <link rel="stylesheet" href="./src/style/css/index.css">
 </head>
-<body class="geleia">
+<body>
     <!-- https://www.figma.com/file/AmkCXW1tBWMGQsep1ImDGk/%23boraCodar---Desafio-10-(Community)?node-id=328%3A2&t=UVuDylcdQ3CrrTPP-0 -->
 
     <main class="container">
@@ -280,12 +280,12 @@
         
         <select id="select">
             <option value="1">default</option>
-            <option value="2">massaRossa</option>
+            <option value="2">massaRosa</option>
             <option value="3">sorvete</option>
             <option value="4">dracula</option>
             <option value="5">geleia</option>
-            <option value="5">backTheme</option>
-          </select>
+            <option value="6">temaBlack</option>
+        </select>
     </div>
 
     <script type="module" src="./src/index.js"></script>
